@@ -54,6 +54,13 @@
 #endif
 
 /*
+ * Types
+ */
+typedef struct jit_va_list {
+    jit_pointer_t	stack;
+} jit_va_list_t;
+
+/*
  * Prototypes
  */
 #  define patch(instr, node)		_patch(_jit, instr, node)
@@ -326,6 +333,11 @@ _jit_ellipsis(jit_state_t *_jit)
     else {
 	assert(!(_jitc->function->self.call & jit_call_varargs));
 	_jitc->function->self.call |= jit_call_varargs;
+
+	/* Allocate va_list like object in the stack. */
+	_jitc->function->vaoff = jit_allocai(sizeof(jit_va_list_t));
+
+	_jitc->function->vagp = _jitc->function->self.argi;
     }
 }
 
@@ -1577,9 +1589,19 @@ _emit_code(jit_state_t *_jit)
 			  (jit_float64_t *)node->w.n->u.w);
 		break;
 #endif
+	    case jit_code_va_start:
+		vastart(rn(node->u.w));
+		break;
+	    case jit_code_va_arg:
+		vaarg(rn(node->u.w), rn(node->v.w));
+		break;
+	    case jit_code_va_arg_d:
+		vaarg_d(rn(node->u.w), rn(node->v.w));
+		break;
 	    case jit_code_live:
 	    case jit_code_arg:
 	    case jit_code_arg_f:		case jit_code_arg_d:
+	    case jit_code_va_end:
 		break;
 	    default:
 		abort();
